--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,7 @@
         android:theme="@style/Theme.Team2Android"
         tools:targetApi="31">
         <activity
-            android:name="com.sopt.now.advanced.team2android.feature.MainActivity"
+            android:name="com.sopt.now.advanced.team2android.feature.main.MainActivity"
             android:exported="true"
             android:screenOrientation="portrait"
             tools:ignore="LockedOrientationActivity" >
