--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -29,6 +29,7 @@ espresso-core = "3.5.1"
 
 # Dagger-Hilt
 dagger-hilt = "2.51"
+inject = "1"
 
 # Third Party
 okhttp = "4.11.0"
@@ -63,6 +64,7 @@ espresso-core = { group = "androidx.test.espresso", name = "espresso-core", vers
 hilt = { group = "com.google.dagger", name = "hilt-android", version.ref = "dagger-hilt" }
 hilt-compiler = { group = "com.google.dagger", name = "hilt-compiler", version.ref = "dagger-hilt" }
 hilt-plugin = { group = "com.google.dagger", name = "hilt-android-gradle-plugin", version.ref = "dagger-hilt" }
+inject = { group = "javax.inject", name = "javax.inject", version.ref = "inject" }
 
 # Third Party
 okhttp-bom = { group = "com.squareup.okhttp3", name = "okhttp-bom", version.ref = "okhttp" }
